--- a/AlphabetSoupCharity_Optimization.ipynb
+++ b/AlphabetSoupCharity_Optimization.ipynb
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,13 @@
       "Epoch 32/35\n",
       "25724/25724 [==============================] - 26s 992us/sample - loss: 0.5365 - accuracy: 0.7380\n",
       "Epoch 33/35\n",
-      " 5568/25724 [=====>........................] - ETA: 22s - loss: 0.5401 - accuracy: 0.7335"
+      "25724/25724 [==============================] - 25s 990us/sample - loss: 0.5363 - accuracy: 0.7385\n",
+      "Epoch 34/35\n",
+      "25724/25724 [==============================] - 17s 650us/sample - loss: 0.5360 - accuracy: 0.7381\n",
+      "Epoch 35/35\n",
+      "25696/25724 [============================>.] - ETA: 0s - loss: 0.5359 - accuracy: 0.7396\n",
+      "Epoch 00035: saving model to checkpointsCH/weights.35.hdf5\n",
+      "25724/25724 [==============================] - 29s 1ms/sample - loss: 0.5359 - accuracy: 0.7395\n"
      ]
     }
    ],
@@ -2224,9 +2230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8575/1 - 1s - loss: 0.6035 - accuracy: 0.7322\n",
+      "Loss: 0.5513541347500882, Accuracy: 0.7322449088096619\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model using the test data\n",
     "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
@@ -2235,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
